# cuda_conditional_compilation

./: .gitignore  README.md
package/: CMakeLists.txt
package/cuda_lite/: main.cu
package/cuda_lite/include/: pipeline.h
package/cuda_pro/: CMakeLists.txt
package/cuda_pro/include/: multiply.h  pipeline.h
package/include/: add.h
source_code/: CMakeLists.txt  main.cu  version_creations.sh
source_code/build_lite/: CMakeCache.txt  Makefile  cmake_install.cmake  main
source_code/build_pro/: CMakeCache.txt  Makefile  cmake_install.cmake  main
source_code/include/: pipeline.h  subtract.h
source_code/src/: add.cu  multiply.cu  pipeline.cu  subtract.cu
